@@ -1,3 +1,7 @@
+* Sep 13 2000 hship
+
+[114017] Rollovers no longer compatible with Navigator 
+
 * Sep 12 2000 hship
 
 More Javadoc for ShowInspector component.
